# Solum-Engine

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json
assets/: materials.json
assets/structures/: aspen_1.vox  aspen_2.vox  aspen_3.vox
include/solum_engine/core/: Application.h  Camera.h
include/solum_engine/jobsystem/: job_system.hpp
include/solum_engine/platform/: WebGPUContext.h
include/solum_engine/render/: BufferManager.h  DebugBoundsManager.h  MaterialManager.h  MeshletBufferController.h  MeshletManager.h  MeshletTypes.h  PipelineManager.h  RegionBuildQueue.h  RuntimeTiming.h  RuntimeTimingTracker.h  TextureManager.h  Uniforms.h  VertexAttributes.h  WebGPURenderer.h
include/solum_engine/render/pipelines/: AbstractRenderPipeline.h  BoundsDebugPipeline.h  MeshletCullingPipeline.h  MeshletOcclusionPipeline.h  VoxelPipeline.h
include/solum_engine/resources/: Constants.h  Coords.h  EngineTuning.h  Util.h
include/solum_engine/ui/: GuiManager.h
include/solum_engine/voxel/: BlockMaterial.h  BlockStorage.h  Chunk.h  ChunkMesher.h  ChunkMeshes.h  ChunkPool.h  ChunkResidencyManager.h  ChunkState.h  Column.h  ColumnStage.h  ColumnState.h  CompressedStore.h  JobScheduler.h  LightStorage.h  LodStorage.h  MeshManager.h  Region.h  RegionGenerator.h  RegionManager.h  RegionState.h  StreamingUpload.h  StructureManager.h  TerrainGenerator.h  VoxelStreamingSystem.h  World.h
shaders/: debug_bounds.wgsl  meshlet_cull.wgsl  meshlet_depth_prepass.wgsl  meshlet_hiz_downsample.wgsl  meshlet_hiz_seed.wgsl  uniforms.wgsl  voxel.wgsl
src/: main.cpp
src/core/: Application.cpp
src/impl/: ogt_vox_impl.cpp
src/jobsystem/: job_system.cpp
src/platform/: WebGPUContext.cpp
src/render/: BufferManager.cpp  DebugBoundsManager.cpp  MaterialManager.cpp  MeshletBufferController.cpp  MeshletManager.cpp  PipelineManager.cpp  RegionBuildQueue.cpp  RuntimeTimingTracker.cpp  TextureManager.cpp  WebGPURenderer.cpp
src/render/pipelines/: BoundsDebugPipeline.cpp  MeshletCullingPipeline.cpp  MeshletOcclusionPipeline.cpp  VoxelPipeline.cpp
src/ui/: GuiManager.cpp
src/voxel/: BlockMaterial.cpp  BlockStorage.cpp  Chunk.cpp  ChunkMesher.cpp  ChunkMeshes.cpp  ChunkPool.cpp  ChunkResidencyManager.cpp  ChunkState.cpp  Column.cpp  ColumnState.cpp  CompressedStore.cpp  JobScheduler.cpp  LightStorage.cpp  LodStorage.cpp  MeshManager.cpp  Region.cpp  RegionManager.cpp  RegionState.cpp  StructureManager.cpp  TerrainGenerator.cpp  VoxelStreamingSystem.cpp  World.cpp
